complete Users API
