# assets/openapi.json
@@ -109,6 +109,170 @@
                 }
             }
         },
+        "/users": {
+            "get": {
+                "tags": ["Users"],
+                "description": "Generic entrypoint route for the Users API.",
+                "operationId": "users",
+                "responses": {
+                    "200": {
+                        "description": "Successful response",
+                        "content": {
+                            "application/json": { "schema": { "$ref": "#/components/responses/EntrypointResponse" } }
+                        }
+                    }
+                }
+            },
+            "put": {
+                "tags": ["Users"],
+                "description": "Creates a new user if the server allows registrations.",
+                "operationId": "create_user",
+                "responses": {
+                    "200": {
+                        "description": "Successful response",
+                        "content": {
+                            "application/json": { "schema": { "$ref": "#/components/responses/UserResponse" } }
+                        }
+                    },
+                    "403": {
+                        "description": "Whether if this server doesn't allow registrations",
+                        "content": {
+                            "application/json": { "schema": { "$ref": "#/components/responses/ApiErrorResponse" } }
+                        }
+                    },
+                    "406": {
+                        "description": "If the `username` or `email` was taken.",
+                        "content": {
+                            "application/json": { "schema": { "$ref": "#/components/responses/ApiErrorResponse" } }
+                        }
+                    }
+                }
+            },
+            "patch": {
+                "tags": ["Users"],
+                "description": "Patch the current authenticated user's metadata about themselves.",
+                "operationId": "patch",
+                "responses": {
+                    "204": {
+                        "description": "Successful response",
+                        "content": {
+                            "application/json": { "schema": { "$ref": "#/components/responses/EmptyApiResponse" } }
+                        }
+                    },
+                    "400": {
+                        "description": "If the request body was invalid (i.e, validation errors)",
+                        "content": {
+                            "application/json": { "schema": { "$ref": "#/components/responses/ApiErrorResponse" } }
+                        }
+                    },
+                    "401": {
+                        "description": "If the session couldn't be validated",
+                        "content": {
+                            "application/json": { "schema": { "$ref": "#/components/responses/ApiErrorResponse" } }
+                        }
+                    },
+                    "403": {
+                        "description": "(Bearer token only) - if the JWT was invalid.",
+                        "content": {
+                            "application/json": { "schema": { "$ref": "#/components/responses/ApiErrorResponse" } }
+                        }
+                    },
+                    "406": {
+                        "description": "If the request body contained invalid data, or if the session header contained invalid data",
+                        "content": {
+                            "application/json": { "schema": { "$ref": "#/components/responses/ApiErrorResponse" } }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "content": {
+                            "application/json": { "schema": { "$ref": "#/components/responses/ApiErrorResponse" } }
+                        }
+                    }
+                }
+            }
+        },
+        "/users/@me": {
+            "get": {
+                "tags": ["Users"],
+                "description": "Returns a [User] from an authenticated request.",
+                "operationId": "get_self",
+                "responses": {
+                    "200": {
+                        "description": "Returns the authenticated user",
+                        "content": {
+                            "application/json": { "schema": { "$ref": "#/components/responses/UserResponse" } }
+                        }
+                    },
+                    "400": {
+                        "description": "If the request body was invalid (i.e, validation errors)",
+                        "content": {
+                            "application/json": { "schema": { "$ref": "#/components/responses/ApiErrorResponse" } }
+                        }
+                    },
+                    "401": {
+                        "description": "If the session couldn't be validated",
+                        "content": {
+                            "application/json": { "schema": { "$ref": "#/components/responses/ApiErrorResponse" } }
+                        }
+                    },
+                    "403": {
+                        "description": "(Bearer token only) - if the JWT was invalid.",
+                        "content": {
+                            "application/json": { "schema": { "$ref": "#/components/responses/ApiErrorResponse" } }
+                        }
+                    },
+                    "406": {
+                        "description": "If the request body contained invalid data, or if the session header contained invalid data",
+                        "content": {
+                            "application/json": { "schema": { "$ref": "#/components/responses/ApiErrorResponse" } }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "content": {
+                            "application/json": { "schema": { "$ref": "#/components/responses/ApiErrorResponse" } }
+                        }
+                    }
+                }
+            }
+        },
+        "/users/{idOrName}": {
+            "get": {
+                "tags": ["Users"],
+                "description": "Retrieve a user by their ID or username.",
+                "operationId": "get_user",
+                "parameters": [
+                    {
+                        "name": "idOrName",
+                        "in": "path",
+                        "description": "Path parameter that can take a [`Name`] or [`Snowflake`] identifier.",
+                        "required": true,
+                        "schema": { "$ref": "#/components/schemas/NameOrSnowflake" }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful response",
+                        "content": {
+                            "application/json": { "schema": { "$ref": "#/components/responses/UserResponse" } }
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid `idOrName` specified",
+                        "content": {
+                            "application/json": { "schema": { "$ref": "#/components/responses/ApiErrorResponse" } }
+                        }
+                    },
+                    "404": {
+                        "description": "Unknown User",
+                        "content": {
+                            "application/json": { "schema": { "$ref": "#/components/responses/ApiErrorResponse" } }
+                        }
+                    }
+                }
+            }
+        },
         "/v1": {
             "get": {
                 "tags": ["Main"],
@@ -400,6 +564,18 @@
                 "format": "date-time",
                 "description": "RFC3339-encoded string that represents the date time of an entity",
                 "readOnly": true
+            },
+            "EntrypointResponse": {
+                "type": "object",
+                "description": "Generic entrypoint message for any API routes like `/users`.",
+                "required": ["message", "docs"],
+                "properties": {
+                    "docs": {
+                        "type": "string",
+                        "description": "URL to the documentation to where you can explore more routes for\nthis specific API."
+                    },
+                    "message": { "type": "string", "description": "A cute message to greet you with" }
+                }
             },
             "Error": {
                 "type": "object",
@@ -869,6 +1045,24 @@
                     }
                 }
             },
+            "EntrypointResponse": {
+                "description": "Response object for \"EntrypointResponse\"",
+                "content": {
+                    "application/json": {
+                        "schema": {
+                            "type": "object",
+                            "required": ["success", "data"],
+                            "properties": {
+                                "data": { "$ref": "#/components/schemas/EntrypointResponse" },
+                                "success": {
+                                    "type": "boolean",
+                                    "description": "whether if this response [EntrypointResponse] was successful or not"
+                                }
+                            }
+                        }
+                    }
+                }
+            },
             "InfoResponse": {
                 "description": "Response object for \"InfoResponse\"",
                 "content": {
@@ -899,6 +1093,24 @@
                                 "success": {
                                     "type": "boolean",
                                     "description": "whether if this response [MainResponse] was successful or not"
+                                }
+                            }
+                        }
+                    }
+                }
+            },
+            "UserResponse": {
+                "description": "Response object for \"User\"",
+                "content": {
+                    "application/json": {
+                        "schema": {
+                            "type": "object",
+                            "required": ["success", "data"],
+                            "properties": {
+                                "data": { "$ref": "#/components/schemas/User" },
+                                "success": {
+                                    "type": "boolean",
+                                    "description": "whether if this response [UserResponse] was successful or not"
                                 }
                             }
                         }
